<resources>
    <string name="app_name">Tareas</string>

    <string name="profile_name">Nombre</string>
    <string name="profile_first_name">Primer nombre</string>
    <string name="profile_last_name_1">Primer Apellido</string>
    <string name="profile_last_name_2">Segundo Apellido</string>
    <string name="profile_phone">Teléfono</string>
    <string name="picture">Foto</string>
    <string name="btn_save">Guardar Perfil</string>
</resources>